--- a/src/app.html
+++ b/src/app.html
@@ -3,11 +3,20 @@
   <head>
     <meta charset="utf-8" />
     <meta name="description" content="" />
-    <link rel="icon" href="%svelte.assets%/favicon.png" />
+
+    <link rel="icon" href="%svelte.assets%/nebs.png" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Calistoga&family=Merriweather:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&display=swap"
+      rel="stylesheet"
+    />
+
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %svelte.head%
   </head>
   <body>
-    <div>%svelte.body%</div>
+    %svelte.body%
   </body>
 </html>
