--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="" />
 
-    <link rel="icon" href="%svelte.assets%/nebs.png" />
+    <link rel="icon" href="%svelte.assets%/assets/nebs.png" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
