--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="description" content="" />
 
-    <link rel="icon" href="%svelte.assets%/assets/nebs.png" />
+    <link rel="icon" href="%svelte.assets%/favicon.ico" />
     <meta
       content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
       name="viewport"
