--- a/src/app.html
+++ b/src/app.html
@@ -4,7 +4,15 @@
     <meta charset="utf-8" />
     <meta name="description" content="" />
 
-    <link rel="icon" href="%svelte.assets%/favicon.ico" />
+    <link rel="apple-touch-icon" sizes="180x180" href="%svelte.assets%/apple-touch-icon.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="%svelte.assets%/favicon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="%svelte.assets%/favicon-16x16.png" />
+    <link rel="manifest" href="%svelte.assets%/site.webmanifest" />
+    <link rel="mask-icon" href="%svelte.assets%/safari-pinned-tab.svg" color="#5bbad5" />
+
+    <meta name="msapplication-TileColor" content="#603cba" />
+    <meta name="theme-color" content="#ffffff" />
+
     <meta
       content="width=device-width, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"
       name="viewport"
