Add simple Tailwind transitions
Documentation:
- https://tailwindcss.com/docs/transition-property
- https://tailwindcss.com/docs/transition-duration

--- a/src/app.html
+++ b/src/app.html
@@ -28,7 +28,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     %svelte.head%
   </head>
-  <body class="system md:text-lg text-primary bg-inverse">
+  <body class="system md:text-lg text-primary bg-inverse transition motion-reduce:transition-none duration-150">
     <script>
       const theme = localStorage.getItem('theme');
 
